# SimpleDrill

./: .gitignore  README.md  pyproject.toml
backend/: settings.py  urls.py
backend/app/: admin.py  models.py  tests.py  views.py
backend/app/fixtures/: general_challenges.json  git_challenges.json  http_challenges.json  python_challenges.json  test_questions.json
backend/app/management/commands/: createperson.py  load.py
backend/app/migrations/: 0001_initial.py  0002_auto_20210213_1506.py  0003_auto_20210216_2151.py  0004_auto_20210303_1239.py  0005_auto_20210308_1802.py  0006_auto_20210319_0955.py
backend/app/templates/: about.html  base.html  drill_topic.html  explain_test.html  homepage.html  login_user.html  login_visitor.html  register_user.html  register_visitor.html  select_topic.html  test.html  view_invites.html
backend/core/: __init__.py  user.py  visitor.py
